--- a/result/views/index.html
+++ b/result/views/index.html
@@ -2,7 +2,7 @@
 <html ng-app="catsvsdogs">
   <head>
     <meta charset="utf-8">
-    <title>Cats vs Dogs -- Result</title>
+    <title>Premier League Winner Poll -- Result</title>
     <base href="/index.html">
     <meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
     <meta name="keywords" content="docker-compose, docker, stack">
@@ -19,14 +19,19 @@
     <div id="content-container">
       <div id="content-container-center">
         <div id="choice">
-          <div class="choice cats">
-            <div class="label">Cats</div>
+          <div class="choice a">
+            <div class="label">Aresenal</div>
             <div class="stat">{{aPercent | number:1}}%</div>
           </div>
           <div class="divider"></div>
-          <div class="choice dogs">
-            <div class="label">Dogs</div>
+          <div class="choice b">
+            <div class="label">Liverpool</div>
             <div class="stat">{{bPercent | number:1}}%</div>
+          </div>
+          <div class="divider"></div>
+          <div class="choice c">
+            <div class="label">Manchester City</div>
+            <div class="stat">{{cPercent | number:1}}%</div>
           </div>
         </div>
       </div>
