Working on results page

--- a/result/views/index.html
+++ b/result/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="catsvsdogs">
+<html ng-app="plpoll">
   <head>
     <meta charset="utf-8">
     <title>Premier League Winner Poll -- Result</title>
@@ -14,8 +14,10 @@
        <div id="background-stats-1">
        </div><!--
       --><div id="background-stats-2">
+       </div><!--
+      --><div id="background-stats-3">
       </div>
-    </div>
+     </div>
     <div id="content-container">
       <div id="content-container-center">
         <div id="choice">
@@ -44,5 +46,6 @@
     <script src="socket.io.js"></script>
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
+
   </body>
 </html>
