--- a/vote/static/stylesheets/style.css
+++ b/vote/static/stylesheets/style.css
@@ -35,6 +35,10 @@ button.b{
   background-color: #00cbca;
 }
 
+button.c{
+  background-color: #5af17b;
+}
+
 #tip{
   text-align: left;
   color: #c0c9ce;
@@ -106,12 +110,20 @@ button.b{
   background-color: #00a2a1;
 }
 
+#choice button.c:hover{
+  background-color: #49c263;
+}
+
 #choice button.a:focus{
   background-color: #1488c6;
 }
 
 #choice button.b:focus{
   background-color: #00a2a1;
+}
+
+#choice button.c:focus{
+  background-color: #49c263;
 }
 
 #background-stats{
