--- a/result/views/index.html
+++ b/result/views/index.html
@@ -38,6 +38,28 @@
         </div>
       </div>
     </div>
+    <div>
+      <canvas id="myChart"></canvas>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
+    <script>
+      const ctx = document.getElementById('myChart');
+    
+      new Chart(ctx, {
+        type: 'pie',
+        data: {
+          labels: ['Red', 'Blue', 'Yellow'],
+          datasets: [{
+            label: 'Results',
+            data: [.33, .33, .33],
+            borderWidth: 1
+          }]
+        }
+      });
+    </script>
+     
     <div id="result">
       <span ng-if="total == 0">No votes yet</span>
       <span ng-if="total == 1">{{total}} vote</span>
