--- a/vote/templates/index.html
+++ b/vote/templates/index.html
@@ -46,7 +46,7 @@
         $(".a").css('opacity','0.5');
         $(".c").css('opacity','0.5');
       }
-      if(vote == "b"){
+      if(vote == "c"){
         $(".c").prop('disabled', true);
         $(".c").html('{{option_c}} <i class="fa fa-check-circle"></i>');
         $(".a").css('opacity','0.5');
