--- a/vote/static/stylesheets/style.css
+++ b/vote/static/stylesheets/style.css
@@ -39,17 +39,33 @@ button.c{
   background-color: #5af17b;
 }
 
+#choice-form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#results{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+#pltable{
+  min-width: 400px;
+}
+
 #tip{
-  text-align: left;
+  text-align: center;
+  align-items: center;
   color: #c0c9ce;
   font-size: 14px;
 }
 
 #hostname{
-  position: absolute;
-  bottom: 100px;
-  right: 0;
-  left: 0;
+  position: relative;
+  text-align: center;
+  align-items: center;
   color: #8f9ea8;
   font-size: 24px;
 }
