--- a/vote/templates/index.html
+++ b/vote/templates/index.html
@@ -14,21 +14,27 @@
     <div id="content-container">
       <div id="content-container-center">
         <h3>{{option_a}} vs {{option_b}} vs {{option_c}}!</h3>
+        <div id="choice-form">
         <form id="choice" name='form' method="POST" action="/">
           <button id="a" type="submit" name="vote" class="a" value="a">{{option_a}}</button>
           <button id="b" type="submit" name="vote" class="b" value="b">{{option_b}}</button>
           <button id="c" type="submit" name="vote" class="c" value="c">{{option_c}}</button>
         </form>
-        <div id="tip">
-          (Tip: you can change your vote)
         </div>
-        <div id="hostname">
-          Processed by container ID {{hostname}}
+        <div id="results">
+          <div id=pltable class="fwp-embed" data-url="premier-league/league-table"></div>
+          <div id="tip">
+            (Tip: you can change your vote)
+          </div>
+          <div id="hostname">
+            Processed by container ID {{hostname}}
+          </div>
         </div>
       </div>
     </div>
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="https://www.footballwebpages.co.uk/embed.js" defer></script>
 
     {% if vote %}
     <script>
