--- a/vote/templates/index.html
+++ b/vote/templates/index.html
@@ -16,9 +16,9 @@
         <h3>{{option_a}} vs {{option_b}} vs {{option_c}}!</h3>
         <div id="choice-form">
         <form id="choice" name='form' method="POST" action="/">
-          <button id="a" type="submit" name="vote" class="a" value="a">{{option_a}}</button>
-          <button id="b" type="submit" name="vote" class="b" value="b">{{option_b}}</button>
-          <button id="c" type="submit" name="vote" class="c" value="c">{{option_c}}</button>
+          <button id="a" type="submit" name="vote" class="a" value="a"><img src="{{ url_for('static',filename='images/aresenal.svg') }}" width="25"> {{option_a}}</button>
+          <button id="b" type="submit" name="vote" class="b" value="b"><img src="{{ url_for('static',filename='images/liverpool.png') }}" width="25"> {{option_b}}</button>
+          <button id="c" type="submit" name="vote" class="c" value="c"><img src="{{ url_for('static',filename='images/manchestercity.svg') }}" width="25"> {{option_c}}</button>
         </form>
         </div>
         <div id="results">
@@ -42,19 +42,19 @@
 
       if(vote == "a"){
         $(".a").prop('disabled', true);
-        $(".a").html('{{option_a}} <i class="fa fa-check-circle"></i>');
+        $(".a").html('<img src="{{ url_for('static',filename='images/aresenal.svg') }}" width="25">{{option_a}} <i class="fa fa-check-circle"></i>');
         $(".b").css('opacity','0.5');
         $(".c").css('opacity','0.5');
       }
       if(vote == "b"){
         $(".b").prop('disabled', true);
-        $(".b").html('{{option_b}} <i class="fa fa-check-circle"></i>');
+        $(".b").html('<img src="{{ url_for('static',filename='images/liverpool.png') }}" width="25">{{option_b}} <i class="fa fa-check-circle"></i>');
         $(".a").css('opacity','0.5');
         $(".c").css('opacity','0.5');
       }
       if(vote == "c"){
         $(".c").prop('disabled', true);
-        $(".c").html('{{option_c}} <i class="fa fa-check-circle"></i>');
+        $(".c").html('<img src="{{ url_for('static',filename='images/manchestercity.svg') }}" width="25">{{option_c}} <i class="fa fa-check-circle"></i>');
         $(".a").css('opacity','0.5');
         $(".b").css('opacity','0.5');
       }
