--- a/result/views/index.html
+++ b/result/views/index.html
@@ -38,6 +38,28 @@
         </div>
       </div>
       <div id="result-container">
+        <div id="resultTable">
+          <table>
+            <tr>
+              <th> </th>
+              <th>Aresenal</th>
+              <th>Liverpool</th>
+              <th>Manchester City</th>
+            </tr>
+            <tr>
+              <td>Votes</td>
+              <td>{{aTotal}}</td>
+              <td>{{bTotal}}</td>
+              <td>{{cTotal}}</td>
+            </tr>
+            <tr>
+              <td> Percentage </td>
+              <td>{{aPercent}}%</td>
+              <td>{{bPercent}}%</td>
+              <td>{{cPercent}}%</td>
+            </tr>
+          </table>
+        </div>
         <div id="chart">
           <canvas id="myChart"></canvas>
         </div>
