--- a/result/views/stylesheets/style.css
+++ b/result/views/stylesheets/style.css
@@ -14,6 +14,12 @@ body{
   opacity:0;
   transition: all 1s linear;
 }
+table{
+  background-color: white;
+  border-radius: 5px;
+  border-collapse: collapse;
+  border: 3px solid black
+}
 
 .divider{
   height: 150px;
@@ -51,19 +57,42 @@ body{
 }
 #result-container{
   display:flex;
-  text-align:center;
   height:100%;
+  width:100%;
+}
+#resultTable{
+  display:table;
+  padding:20px;
+  justify-content: center;
+  width: 33%;
+}
+table td {
+  border: 2px solid black;
+  text-align: center;
+}
+table th {
+  border: 2px solid black;
+  text-align: center;
+}
+#chart{
+  display:flex;
+  padding:20px;
+  justify-content: center;
+  width: 33%;
 }
 #result{
+  display:flex;
   z-index: 3;
   position: relative;
   text-align:center;
+  justify-content: center;
   top: 40px;
   left: 40px;
   color: #fff;
   opacity: 0.5;
   font-size: 45px;
   font-weight: 600;
+  width: 33%;
 }
 #choice{
   transition: all 300ms linear;
@@ -125,4 +154,9 @@ body{
   margin-bottom:-4px;
   width:33%;
   height:100%;
+}
+
+#myChart{
+  background-color: white;
+  border-radius: 25px;
 }
